c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/compound_bitwise_and.c
int main(void) {
    // Can't perform compound bitwise operations with doubles
    double d = 1.0;
    d &= 0;
    return (int) d;
}